--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/4965007.jpg');
+    background-image: url('img/Captura\ de\ tela_2025-04-23_08-21-28.png');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
