--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,8 @@ section {
 
 
 .nav-link {
-    color: #CB6D43;
-    font-weight: 600;
+    color: #1731c7;
+    font-weight: 600;f
 }
 
 .inicio-fundo {
